--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.button {
+    background-color: blue;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
